# CMake_Build_System

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_build_system_guide.md  cmake_install.cmake  file.txt  pi_config.py
cmake/: add_all_targets.cmake  add_all_tests.cmake  add_exe.cmake  add_gtest.cmake  buildsystem.cmake  cmake-checks.cmake  configure_target.cmake  install_target.cmake  strip_target.cmake
cmake/checks/: 2_tidy-checks.cmake  README.md  tidy-checks.cmake
cmake/install/: README.md  install_target.cmake  strip_target.cmake
cmake/libraries/: add_all_libraries.cmake  setup_library.cmake
cmake/options/: README.md  set_default_debug_options.cmake
cmake/testing/: add_all_tests.cmake  add_single_test.cmake
cmake/toolchains/: aarch64-glibc-toolchain.cmake
libraries/0_Common/: CMakeLists.txt  common_sources.cmake
libraries/0_Common/include/: comparisons.h  string_operations.h  utilities.h
libraries/0_Common/src/: comparisons.c  file_io.c  string_operations.c  utilities.c
libraries/1_Math/: CMakeLists.txt
libraries/2_DataStructures/: CMakeLists.txt
libraries/2_DataStructures/include/: adjacency_list.h  adjacency_matrix.h  linked_list.h
libraries/2_DataStructures/src/: adjacency_list.c  adjacency_matrix.c  linked_list.c
libraries/4_Networking/include/: socket_io.h  tcp_server.h
libraries/4_Networking/src/: socket_io.c  tcp_server.c
project/remote/include/: command_codes.h  request_handler.h
project/remote/src/: blink.c  request_handler.c
project/src/: hello.c
project_1/remote/src/: hello.c
(+21 files in other folders)
